chapitres/4/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailhog
  name: mailhog
spec:
  ports:
  - name: port-1
    port: 1025
    protocol: TCP
    targetPort: 1025
  - name: port-2
    port: 8025
    protocol: TCP
    targetPort: 8025
  selector:
    app: mailhog
